qt/gen_qboxlayout.h

typedef struct QBoxLayout QBoxLayout;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QHBoxLayout QHBoxLayout;
typedef struct QLayout QLayout;
typedef struct QLayoutItem QLayoutItem;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QSpacerItem QSpacerItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVBoxLayout QVBoxLayout;
typedef struct QWidget QWidget;
bool QBoxLayout_override_virtual_disconnectNotify(void* self, intptr_t slot);
bool QBoxLayout_override_virtual_widget(void* self, intptr_t slot);
QWidget* QBoxLayout_virtualbase_widget(void* self);
bool QBoxLayout_override_virtual_spacerItem(void* self, intptr_t slot);
QSpacerItem* QBoxLayout_virtualbase_spacerItem(void* self);
void QBoxLayout_delete(QBoxLayout* self);
QHBoxLayout* QHBoxLayout_new(QWidget* parent);
QHBoxLayout* QHBoxLayout_new2();
QMetaObject* QHBoxLayout_metaObject(const QHBoxLayout* self);
void* QHBoxLayout_metacast(QHBoxLayout* self, const char* param1);
int QHBoxLayout_metacall(QHBoxLayout* self, int param1, int param2, void** param3);
struct miqt_string QHBoxLayout_tr(const char* s);
struct miqt_string QHBoxLayout_trUtf8(const char* s);
struct miqt_string QHBoxLayout_tr2(const char* s, const char* c);
struct miqt_string QHBoxLayout_tr3(const char* s, const char* c, int n);
struct miqt_string QHBoxLayout_trUtf82(const char* s, const char* c);
struct miqt_string QHBoxLayout_trUtf83(const char* s, const char* c, int n);
bool QHBoxLayout_override_virtual_metacall(void* self, intptr_t slot);
int QHBoxLayout_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QHBoxLayout_override_virtual_addItem(void* self, intptr_t slot);
void QHBoxLayout_virtualbase_addItem(void* self, QLayoutItem* param1);
bool QHBoxLayout_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QHBoxLayout_virtualbase_sizeHint(const void* self);
bool QHBoxLayout_override_virtual_minimumSize(void* self, intptr_t slot);
QSize* QHBoxLayout_virtualbase_minimumSize(const void* self);
bool QHBoxLayout_override_virtual_maximumSize(void* self, intptr_t slot);
QSize* QHBoxLayout_virtualbase_maximumSize(const void* self);
bool QHBoxLayout_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QHBoxLayout_virtualbase_hasHeightForWidth(const void* self);
bool QHBoxLayout_override_virtual_heightForWidth(void* self, intptr_t slot);
int QHBoxLayout_virtualbase_heightForWidth(const void* self, int param1);
bool QHBoxLayout_override_virtual_minimumHeightForWidth(void* self, intptr_t slot);
int QHBoxLayout_virtualbase_minimumHeightForWidth(const void* self, int param1);
bool QHBoxLayout_override_virtual_expandingDirections(void* self, intptr_t slot);
int QHBoxLayout_virtualbase_expandingDirections(const void* self);
bool QHBoxLayout_override_virtual_invalidate(void* self, intptr_t slot);
void QHBoxLayout_virtualbase_invalidate(void* self);
bool QHBoxLayout_override_virtual_itemAt(void* self, intptr_t slot);
QLayoutItem* QHBoxLayout_virtualbase_itemAt(const void* self, int param1);
bool QHBoxLayout_override_virtual_takeAt(void* self, intptr_t slot);
QLayoutItem* QHBoxLayout_virtualbase_takeAt(void* self, int param1);
bool QHBoxLayout_override_virtual_count(void* self, intptr_t slot);
int QHBoxLayout_virtualbase_count(const void* self);
bool QHBoxLayout_override_virtual_setGeometry(void* self, intptr_t slot);
void QHBoxLayout_virtualbase_setGeometry(void* self, QRect* geometry);
bool QHBoxLayout_override_virtual_geometry(void* self, intptr_t slot);
QRect* QHBoxLayout_virtualbase_geometry(const void* self);
bool QHBoxLayout_override_virtual_indexOf(void* self, intptr_t slot);
int QHBoxLayout_virtualbase_indexOf(const void* self, QWidget* param1);
bool QHBoxLayout_override_virtual_isEmpty(void* self, intptr_t slot);
bool QHBoxLayout_virtualbase_isEmpty(const void* self);
bool QHBoxLayout_override_virtual_controlTypes(void* self, intptr_t slot);
int QHBoxLayout_virtualbase_controlTypes(const void* self);
bool QHBoxLayout_override_virtual_layout(void* self, intptr_t slot);
QLayout* QHBoxLayout_virtualbase_layout(void* self);
bool QHBoxLayout_override_virtual_childEvent(void* self, intptr_t slot);
void QHBoxLayout_virtualbase_childEvent(void* self, QChildEvent* e);
bool QHBoxLayout_override_virtual_event(void* self, intptr_t slot);
bool QHBoxLayout_virtualbase_event(void* self, QEvent* event);
bool QHBoxLayout_override_virtual_eventFilter(void* self, intptr_t slot);
bool QHBoxLayout_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QHBoxLayout_override_virtual_timerEvent(void* self, intptr_t slot);
void QHBoxLayout_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QHBoxLayout_override_virtual_customEvent(void* self, intptr_t slot);
void QHBoxLayout_virtualbase_customEvent(void* self, QEvent* event);
bool QHBoxLayout_override_virtual_connectNotify(void* self, intptr_t slot);
void QHBoxLayout_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QHBoxLayout_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QHBoxLayout_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
bool QHBoxLayout_override_virtual_widget(void* self, intptr_t slot);
QWidget* QHBoxLayout_virtualbase_widget(void* self);
bool QHBoxLayout_override_virtual_spacerItem(void* self, intptr_t slot);
QSpacerItem* QHBoxLayout_virtualbase_spacerItem(void* self);
void QHBoxLayout_delete(QHBoxLayout* self);
QVBoxLayout* QVBoxLayout_new(QWidget* parent);
QVBoxLayout* QVBoxLayout_new2();
QMetaObject* QVBoxLayout_metaObject(const QVBoxLayout* self);
void* QVBoxLayout_metacast(QVBoxLayout* self, const char* param1);
int QVBoxLayout_metacall(QVBoxLayout* self, int param1, int param2, void** param3);
struct miqt_string QVBoxLayout_tr(const char* s);
struct miqt_string QVBoxLayout_trUtf8(const char* s);
struct miqt_string QVBoxLayout_tr2(const char* s, const char* c);
struct miqt_string QVBoxLayout_tr3(const char* s, const char* c, int n);
struct miqt_string QVBoxLayout_trUtf82(const char* s, const char* c);
struct miqt_string QVBoxLayout_trUtf83(const char* s, const char* c, int n);
bool QVBoxLayout_override_virtual_metacall(void* self, intptr_t slot);
int QVBoxLayout_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QVBoxLayout_override_virtual_addItem(void* self, intptr_t slot);
void QVBoxLayout_virtualbase_addItem(void* self, QLayoutItem* param1);
bool QVBoxLayout_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QVBoxLayout_virtualbase_sizeHint(const void* self);
bool QVBoxLayout_override_virtual_minimumSize(void* self, intptr_t slot);
QSize* QVBoxLayout_virtualbase_minimumSize(const void* self);
bool QVBoxLayout_override_virtual_maximumSize(void* self, intptr_t slot);
QSize* QVBoxLayout_virtualbase_maximumSize(const void* self);
bool QVBoxLayout_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QVBoxLayout_virtualbase_hasHeightForWidth(const void* self);
bool QVBoxLayout_override_virtual_heightForWidth(void* self, intptr_t slot);
int QVBoxLayout_virtualbase_heightForWidth(const void* self, int param1);
int QVBoxLayout_virtualbase_minimumHeightForWidth(const void* self, int param1);