qt/gen_qboxlayout.nim

proc fcQBoxLayout_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_disconnectNotify".}
proc fQBoxLayout_virtualbase_widget(self: pointer, ): pointer{.importc: "QBoxLayout_virtualbase_widget".}
proc fcQBoxLayout_override_virtual_widget(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_widget".}
proc fQBoxLayout_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QBoxLayout_virtualbase_spacerItem".}
proc fcQBoxLayout_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_spacerItem".}
proc fcQBoxLayout_delete(self: pointer) {.importc: "QBoxLayout_delete".}
proc fcQHBoxLayout_new(parent: pointer): ptr cQHBoxLayout {.importc: "QHBoxLayout_new".}
proc fcQHBoxLayout_new2(): ptr cQHBoxLayout {.importc: "QHBoxLayout_new2".}
proc fcQHBoxLayout_metaObject(self: pointer, ): pointer {.importc: "QHBoxLayout_metaObject".}
proc fcQHBoxLayout_metacast(self: pointer, param1: cstring): pointer {.importc: "QHBoxLayout_metacast".}
proc fcQHBoxLayout_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QHBoxLayout_metacall".}
proc fcQHBoxLayout_tr(s: cstring): struct_miqt_string {.importc: "QHBoxLayout_tr".}
proc fcQHBoxLayout_trUtf8(s: cstring): struct_miqt_string {.importc: "QHBoxLayout_trUtf8".}
proc fcQHBoxLayout_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QHBoxLayout_tr2".}
proc fcQHBoxLayout_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QHBoxLayout_tr3".}
proc fcQHBoxLayout_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QHBoxLayout_trUtf82".}
proc fcQHBoxLayout_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QHBoxLayout_trUtf83".}
proc fQHBoxLayout_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QHBoxLayout_virtualbase_metacall".}
proc fcQHBoxLayout_override_virtual_metacall(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_metacall".}
proc fQHBoxLayout_virtualbase_addItem(self: pointer, param1: pointer): void{.importc: "QHBoxLayout_virtualbase_addItem".}
proc fcQHBoxLayout_override_virtual_addItem(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_addItem".}
proc fQHBoxLayout_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QHBoxLayout_virtualbase_sizeHint".}
proc fcQHBoxLayout_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_sizeHint".}
proc fQHBoxLayout_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QHBoxLayout_virtualbase_minimumSize".}
proc fcQHBoxLayout_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_minimumSize".}
proc fQHBoxLayout_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QHBoxLayout_virtualbase_maximumSize".}
proc fcQHBoxLayout_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_maximumSize".}
proc fQHBoxLayout_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QHBoxLayout_virtualbase_hasHeightForWidth".}
proc fcQHBoxLayout_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_hasHeightForWidth".}
proc fQHBoxLayout_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QHBoxLayout_virtualbase_heightForWidth".}
proc fcQHBoxLayout_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_heightForWidth".}
proc fQHBoxLayout_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QHBoxLayout_virtualbase_minimumHeightForWidth".}
proc fcQHBoxLayout_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_minimumHeightForWidth".}
proc fQHBoxLayout_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QHBoxLayout_virtualbase_expandingDirections".}
proc fcQHBoxLayout_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_expandingDirections".}
proc fQHBoxLayout_virtualbase_invalidate(self: pointer, ): void{.importc: "QHBoxLayout_virtualbase_invalidate".}
proc fcQHBoxLayout_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_invalidate".}
proc fQHBoxLayout_virtualbase_itemAt(self: pointer, param1: cint): pointer{.importc: "QHBoxLayout_virtualbase_itemAt".}
proc fcQHBoxLayout_override_virtual_itemAt(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_itemAt".}
proc fQHBoxLayout_virtualbase_takeAt(self: pointer, param1: cint): pointer{.importc: "QHBoxLayout_virtualbase_takeAt".}
proc fcQHBoxLayout_override_virtual_takeAt(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_takeAt".}
proc fQHBoxLayout_virtualbase_count(self: pointer, ): cint{.importc: "QHBoxLayout_virtualbase_count".}
proc fcQHBoxLayout_override_virtual_count(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_count".}
proc fQHBoxLayout_virtualbase_setGeometry(self: pointer, geometry: pointer): void{.importc: "QHBoxLayout_virtualbase_setGeometry".}
proc fcQHBoxLayout_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_setGeometry".}
proc fQHBoxLayout_virtualbase_geometry(self: pointer, ): pointer{.importc: "QHBoxLayout_virtualbase_geometry".}
proc fcQHBoxLayout_override_virtual_geometry(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_geometry".}
proc fQHBoxLayout_virtualbase_indexOf(self: pointer, param1: pointer): cint{.importc: "QHBoxLayout_virtualbase_indexOf".}
proc fcQHBoxLayout_override_virtual_indexOf(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_indexOf".}
proc fQHBoxLayout_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QHBoxLayout_virtualbase_isEmpty".}
proc fcQHBoxLayout_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_isEmpty".}
proc fQHBoxLayout_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QHBoxLayout_virtualbase_controlTypes".}
proc fcQHBoxLayout_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_controlTypes".}
proc fQHBoxLayout_virtualbase_layout(self: pointer, ): pointer{.importc: "QHBoxLayout_virtualbase_layout".}
proc fcQHBoxLayout_override_virtual_layout(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_layout".}
proc fQHBoxLayout_virtualbase_childEvent(self: pointer, e: pointer): void{.importc: "QHBoxLayout_virtualbase_childEvent".}
proc fcQHBoxLayout_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_childEvent".}
proc fQHBoxLayout_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QHBoxLayout_virtualbase_event".}
proc fcQHBoxLayout_override_virtual_event(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_event".}
proc fQHBoxLayout_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QHBoxLayout_virtualbase_eventFilter".}
proc fcQHBoxLayout_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_eventFilter".}
proc fQHBoxLayout_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QHBoxLayout_virtualbase_timerEvent".}
proc fcQHBoxLayout_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_timerEvent".}
proc fQHBoxLayout_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QHBoxLayout_virtualbase_customEvent".}
proc fcQHBoxLayout_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_customEvent".}
proc fQHBoxLayout_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QHBoxLayout_virtualbase_connectNotify".}
proc fcQHBoxLayout_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_connectNotify".}
proc fQHBoxLayout_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QHBoxLayout_virtualbase_disconnectNotify".}
proc fcQHBoxLayout_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_disconnectNotify".}
proc fQHBoxLayout_virtualbase_widget(self: pointer, ): pointer{.importc: "QHBoxLayout_virtualbase_widget".}
proc fcQHBoxLayout_override_virtual_widget(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_widget".}
proc fQHBoxLayout_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QHBoxLayout_virtualbase_spacerItem".}
proc fcQHBoxLayout_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QHBoxLayout_override_virtual_spacerItem".}
proc fcQHBoxLayout_delete(self: pointer) {.importc: "QHBoxLayout_delete".}
proc fcQVBoxLayout_new(parent: pointer): ptr cQVBoxLayout {.importc: "QVBoxLayout_new".}
proc fcQVBoxLayout_new2(): ptr cQVBoxLayout {.importc: "QVBoxLayout_new2".}
proc fcQVBoxLayout_metaObject(self: pointer, ): pointer {.importc: "QVBoxLayout_metaObject".}
proc fcQVBoxLayout_metacast(self: pointer, param1: cstring): pointer {.importc: "QVBoxLayout_metacast".}
proc fcQVBoxLayout_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QVBoxLayout_metacall".}
proc fcQVBoxLayout_tr(s: cstring): struct_miqt_string {.importc: "QVBoxLayout_tr".}
proc fcQVBoxLayout_trUtf8(s: cstring): struct_miqt_string {.importc: "QVBoxLayout_trUtf8".}
proc fcQVBoxLayout_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QVBoxLayout_tr2".}
proc fcQVBoxLayout_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QVBoxLayout_tr3".}
proc fcQVBoxLayout_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QVBoxLayout_trUtf82".}
proc fcQVBoxLayout_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QVBoxLayout_trUtf83".}
proc fQVBoxLayout_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QVBoxLayout_virtualbase_metacall".}
proc fcQVBoxLayout_override_virtual_metacall(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_metacall".}
proc fQVBoxLayout_virtualbase_addItem(self: pointer, param1: pointer): void{.importc: "QVBoxLayout_virtualbase_addItem".}
proc fcQVBoxLayout_override_virtual_addItem(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_addItem".}
proc fQVBoxLayout_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QVBoxLayout_virtualbase_sizeHint".}
proc fcQVBoxLayout_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_sizeHint".}
proc fQVBoxLayout_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QVBoxLayout_virtualbase_minimumSize".}
proc fcQVBoxLayout_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_minimumSize".}
proc fQVBoxLayout_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QVBoxLayout_virtualbase_maximumSize".}
proc fcQVBoxLayout_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_maximumSize".}
proc fQVBoxLayout_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QVBoxLayout_virtualbase_hasHeightForWidth".}
proc fcQVBoxLayout_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_hasHeightForWidth".}
proc fQVBoxLayout_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QVBoxLayout_virtualbase_heightForWidth".}
proc fcQVBoxLayout_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_heightForWidth".}
proc fQVBoxLayout_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QVBoxLayout_virtualbase_minimumHeightForWidth".}
